# rapid-recorder

./: .gitignore  README.md  build.bat  index.html  main.cpp  package.json  pnpm-lock.yaml  实施计划.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: recorder.toml
src-tauri/recorder/: Cargo.toml  build.rs
src-tauri/recorder/core/: Bridge.cpp  Bridge.h  CaptureEngine.cpp  CaptureEngine.h  Common.h  GifEncoder.cpp  GifEncoder.h  Recorder.cpp  Recorder.h  VideoEncoder.cpp  VideoEncoder.h
src-tauri/recorder/permissions/: default.toml
src-tauri/recorder/permissions/autogenerated/: reference.md
src-tauri/recorder/permissions/autogenerated/commands/: get_elapsed.toml  is_recording.toml
src-tauri/recorder/permissions/schemas/: schema.json
src-tauri/recorder/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
