[package]
name = "tauri-plugin-recorder"
version = "0.0.0"
authors = ["Antigravity"]
edition = "2021"
links = "tauri-plugin-recorder"
rust-version = "1.77.2"
description = "Tauri plugin for high-performance screen recording"

[dependencies]
tauri = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-plugin = "2.0.0"
cc = "1.0"
